[package]
name = "aio-translator-jparacrawl"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
aio-translator-interface.workspace = true
ct2rs = { workspace = true, default-features = false }

interface-model = { workspace = true, default-features = false }
base-util = { workspace = true, default-features = false }
maplit.workspace = true
env_logger.workspace = true
log = "0.4.27"
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
